<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_blue"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/wifi_error_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:src="@drawable/ic_action_wifi_discoonect" />

    <TextView
        android:id="@+id/wifi_error_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_error_img"
        android:layout_centerVertical="true"
        android:layout_margin="10dip"
        android:text="@string/error"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_error_heading"
        android:layout_margin="10dip"
        android:text="@string/network_error_msg"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/wifi_retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dip"
        android:layout_marginRight="20dip"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/retry" />

</RelativeLayout>