<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_displying_screen"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/subject_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/content_data"
            android:hint="@string/subject"
            android:padding="10dp"
            android:textSize="15sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/content_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subject_spinner"
                android:layout_margin="10dp"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint="@string/content"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:textSize="15sp" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/newbuttonwithclick"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>